bpo-36504: Fix signed integer overflow in _ctypes.c's PyCArrayType_new()